--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,7 @@ button{
     height: 40px;
     border: none;
     border-radius: 25px;
-    margin-top: 65px ;
+    margin-top: 65gitpx ;
     background:hsl(0, 0%, 95%);
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
