--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body{
 }
 main{
     padding: 25px 0;
-    margin-left: 500px;
+    /* margin-left: 350px; */
 
 }
 section{
@@ -22,7 +22,8 @@ section{
     width: 280px;
     background: hsl(31, 77%, 52%);
     padding: 25px 35px;
-    border-radius: 7px 0 0 7px;
+    border-radius: 7px  7px 0 0;
+   
 }
 .article-2{
     height: 400px;
@@ -36,14 +37,15 @@ section{
     width: 280px;
     background: hsl(179, 100%, 13%);
     padding: 25px 35px;
-    border-radius: 0 7px 7px 0;
+    border-radius: 0 0 7px 7px;
+    
 }
 button{
     width:120px;
     height: 40px;
     border: none;
     border-radius: 25px;
-    margin-top: 65gitpx ;
+    margin-top: 65px ;
     background:hsl(0, 0%, 95%);
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
@@ -79,6 +81,12 @@ p{
     main{
         margin-left:250px;
         margin-top: 100px;
+    }
+    .article-1{
+        border-radius: 7px 0 0 7px ;
+    }
 
+    .article-3{
+        border-radius: 0 7px 7px 0;
     }
 }
